--- a/index.html
+++ b/index.html
@@ -1,14 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Binary Arithmetic Visualizer</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <style>
+    /* -------------------- RESET -------------------- */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Poppins", sans-serif;
+      color: #f8fafc;
+      overflow-x: hidden;
+      min-height: 100vh;
+      background: radial-gradient(circle at top left, #020617, #0f172a 60%, #1e293b 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+    }
+
+    /* -------------------- BACKGROUND ANIMATION -------------------- */
+    .gradient {
+      position: absolute;
+      width: 120%;
+      height: 120%;
+      background: conic-gradient(from 180deg at 50% 50%, #38bdf8, #0ea5e9, #22d3ee, #0ea5e9, #38bdf8);
+      filter: blur(250px);
+      animation: rotate 18s linear infinite;
+      opacity: 0.25;
+      z-index: 0;
+    }
+
+    @keyframes rotate {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    /* -------------------- FLOATING PARTICLES -------------------- */
+    .particle {
+      position: absolute;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      filter: blur(1px);
+      animation: floaty 12s infinite ease-in-out;
+      z-index: 1;
+    }
+
+    .particle:nth-child(1) { width: 6px; height: 6px; top: 15%; left: 20%; animation-delay: 0s; }
+    .particle:nth-child(2) { width: 8px; height: 8px; top: 40%; left: 70%; animation-delay: 2s; }
+    .particle:nth-child(3) { width: 5px; height: 5px; top: 60%; left: 30%; animation-delay: 4s; }
+    .particle:nth-child(4) { width: 7px; height: 7px; top: 80%; left: 80%; animation-delay: 1s; }
+
+    @keyframes floaty {
+      0% { transform: translateY(0); opacity: 0.5; }
+      50% { transform: translateY(-40px); opacity: 1; }
+      100% { transform: translateY(0); opacity: 0.5; }
+    }
+
+    /* -------------------- MAIN CARD -------------------- */
+    .container {
+      z-index: 10;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      border-radius: 24px;
+      padding: 60px 50px;
+      width: 90%;
+      max-width: 850px;
+      box-shadow: 0 0 30px rgba(56, 189, 248, 0.25);
+      position: relative;
+      overflow: hidden;
+      animation: fadeIn 2s ease;
+      transform: translateY(0);
+      transition: all 0.4s ease-in-out;
+    }
+
+    .container:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 0 45px rgba(56, 189, 248, 0.4);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h1 {
+      font-size: 2.8em;
+      color: #38bdf8;
+      font-weight: 700;
+      letter-spacing: 1px;
+      margin-bottom: 15px;
+      text-shadow: 0 0 20px rgba(56, 189, 248, 0.6);
+    }
+
+    p {
+      color: #cbd5e1;
+      font-size: 1.1em;
+      line-height: 1.6;
+      margin-bottom: 40px;
+    }
+
+    /* -------------------- BUTTONS -------------------- */
+    .button-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 25px;
+      margin-bottom: 30px;
+    }
+
+    .btn {
+      position: relative;
+      background: linear-gradient(135deg, #38bdf8, #0ea5e9);
+      color: #0f172a;
+      padding: 15px 40px;
+      border-radius: 12px;
+      font-weight: 600;
+      letter-spacing: 0.4px;
+      text-decoration: none;
+      font-size: 1.05em;
+      overflow: hidden;
+      transition: all 0.35s ease;
+      box-shadow: 0 0 20px rgba(56, 189, 248, 0.3);
+    }
+
+    .btn::before {
+      content: "";
+      position: absolute;
+      width: 160%;
+      height: 160%;
+      background: rgba(255, 255, 255, 0.3);
+      top: -100%;
+      left: -50%;
+      transform: rotate(45deg);
+      transition: all 0.8s ease;
+    }
+
+    .btn:hover::before {
+      top: 120%;
+      left: 120%;
+    }
+
+    .btn:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 0 30px rgba(56, 189, 248, 0.5);
+    }
+
+    /* -------------------- FOOTER -------------------- */
+    footer {
+      color: #94a3b8;
+      font-size: 0.95em;
+      letter-spacing: 0.3px;
+    }
+
+    footer span {
+      color: #38bdf8;
+      font-weight: 600;
+    }
+
+    /* -------------------- RESPONSIVE -------------------- */
+    @media (max-width: 600px) {
+      h1 { font-size: 2em; }
+      p { font-size: 1em; }
+      .btn { width: 85%; padding: 12px 25px; }
+      .container { padding: 40px 20px; }
+    }
+  </style>
 </head>
+
 <body>
+  <!-- Background animation elements -->
+  <div class="gradient"></div>
+  <div class="particle"></div>
+  <div class="particle"></div>
+  <div class="particle"></div>
+  <div class="particle"></div>
+
+  <!-- Main card -->
   <div class="container">
     <h1>Binary Arithmetic Visualizer</h1>
-    <p>Explore step-by-step visualization of binary arithmetic algorithms.</p>
+    <p>
+      Experience the beauty of digital logic through interactive, real-time
+      visualization of <strong>Booth’s Multiplication</strong>, <strong>Restoring Division</strong>, and
+      <strong>Non-Restoring Division</strong> algorithms.
+    </p>
 
     <div class="button-grid">
       <a href="booth.html" class="btn">Booth’s Multiplication</a>
@@ -16,9 +204,7 @@
       <a href="nonrestoring.html" class="btn">Non-Restoring Division</a>
     </div>
 
-    <footer>
-      <p>Designed by Aryan with love ❤ | © 2025</p>
-    </footer>
+    <footer>Designed with 💙 by <span>Aryan</span> | © 2025</footer>
   </div>
 </body>
 </html>
