--- a/nonrestoring.html
+++ b/nonrestoring.html
@@ -5,63 +5,178 @@
   <title>Non-Restoring Division Visualizer</title>
   <link rel="stylesheet" href="css/style.css">
   <style>
+    body {
+      background: radial-gradient(circle at 20% 20%, #0f172a, #1e293b);
+      color: #f8fafc;
+      font-family: 'Poppins', sans-serif;
+    }
+
     .division-container {
       background: rgba(30, 41, 59, 0.9);
       padding: 25px;
       border-radius: 16px;
       width: 85%;
-      max-width: 900px;
+      max-width: 1100px;
       margin: 30px auto;
-      box-shadow: 0 4px 25px rgba(0,0,0,0.4);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.5);
     }
 
-    h2 { color: #38bdf8; margin-bottom: 10px; }
+    h2 {
+      color: #38bdf8;
+      text-align: center;
+      font-size: 1.8em;
+      margin-bottom: 15px;
+    }
 
-    .inputs { margin: 20px 0; }
+    .inputs {
+      text-align: center;
+      margin: 20px 0;
+    }
 
     input {
-      width: 100px; padding: 6px; text-align: center;
-      border: none; border-radius: 6px;
-      background: #f1f5f9; color: #000; margin-right: 10px;
+      width: 120px;
+      padding: 8px;
+      text-align: center;
+      border: none;
+      border-radius: 8px;
+      background: #f1f5f9;
+      color: #000;
+      margin-right: 10px;
+      font-weight: 600;
     }
 
     button {
-      background: #38bdf8; border: none; padding: 8px 18px;
-      border-radius: 8px; color: #0f172a; font-weight: 600;
-      cursor: pointer; margin: 6px;
+      background: linear-gradient(90deg, #38bdf8, #0ea5e9);
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      color: #0f172a;
+      font-weight: 600;
+      cursor: pointer;
+      margin: 6px;
+      box-shadow: 0 0 10px rgba(56,189,248,0.4);
+      transition: 0.3s;
     }
-    button:hover { background: #0ea5e9; }
+
+    button:hover {
+      background: #0ea5e9;
+      transform: translateY(-2px);
+      box-shadow: 0 0 20px rgba(56,189,248,0.6);
+    }
 
     .registers {
-      display: flex; justify-content: center; gap: 20px;
-      margin-top: 20px; flex-wrap: wrap;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
     }
 
     .register {
-      background: #1e293b; padding: 10px 20px;
-      border-radius: 10px; text-align: center;
-      box-shadow: 0 0 10px rgba(56,189,248,0.3);
+      background: #1e293b;
+      padding: 10px 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 0 12px rgba(56,189,248,0.3);
+      min-width: 150px;
     }
-    .register h4 { margin: 0; color: #38bdf8; }
+
+    .register h4 {
+      color: #38bdf8;
+    }
 
     .bits {
-      display: flex; gap: 4px; margin-top: 5px;
+      display: flex;
+      gap: 4px;
+      justify-content: center;
+      margin-top: 6px;
     }
+
     .bit {
-      width: 24px; height: 24px; background: #334155;
-      color: #f8fafc; display: flex; align-items: center;
-      justify-content: center; border-radius: 4px; font-weight: bold;
+      width: 26px;
+      height: 26px;
+      background: #334155;
+      color: #f8fafc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 4px;
+      font-weight: bold;
+      font-size: 0.9em;
     }
 
     .explanation {
       background: rgba(148,163,184,0.15);
-      padding: 12px; border-radius: 8px; margin-top: 20px;
-      color: #e2e8f0; font-size: 1.05em; line-height: 1.6;
+      padding: 14px;
+      border-radius: 10px;
+      margin-top: 25px;
+      font-size: 1.05em;
     }
 
-    .output { margin-top: 20px; font-weight: 600; font-size: 1.1em; color: #f8fafc; }
-    .footer-buttons { margin-top: 30px; }
-    a.back { display: inline-block; text-decoration: none; color: #38bdf8; font-weight: 600; margin-top: 20px; }
+    .step-log {
+      margin-top: 25px;
+      background: rgba(15,23,42,0.6);
+      border: 1px solid rgba(56,189,248,0.2);
+      border-radius: 10px;
+      padding: 15px;
+      height: 220px;
+      overflow-y: auto;
+      box-shadow: inset 0 0 10px rgba(56,189,248,0.1);
+    }
+
+    .log-entry {
+      margin-bottom: 8px;
+      border-left: 3px solid #38bdf8;
+      padding-left: 8px;
+      font-size: 0.95em;
+      line-height: 1.4;
+    }
+
+    .log-entry b {
+      color: #38bdf8;
+    }
+
+    .output {
+      margin-top: 25px;
+      font-weight: 600;
+      text-align: center;
+      font-size: 1.15em;
+      color: #f8fafc;
+    }
+
+    .footer-buttons {
+      text-align: center;
+      margin-top: 25px;
+    }
+
+    a.back {
+      display: block;
+      text-align: center;
+      text-decoration: none;
+      color: #38bdf8;
+      font-weight: 600;
+      margin-top: 20px;
+    }
+
+    a.back:hover {
+      color: #0ea5e9;
+    }
+
+    summary {
+      color: #38bdf8;
+      font-size: 1.1em;
+      margin-top: 25px;
+      cursor: pointer;
+    }
+
+    details {
+      background: rgba(148,163,184,0.1);
+      padding: 12px;
+      border-radius: 8px;
+      margin-top: 10px;
+      color: #e2e8f0;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
@@ -89,7 +204,27 @@
       </div>
     </div>
 
+    <details>
+      <summary>📘 Theory: Non-Restoring Division Algorithm</summary>
+      <p>
+        The Non-Restoring Division Algorithm avoids restoration of the partial remainder in each cycle, improving efficiency.  
+      </p>
+      <ol>
+        <li>Shift left (AC, Q).</li>
+        <li>If AC ≥ 0 → AC = AC - M; else → AC = AC + M.</li>
+        <li>If AC ≥ 0 → Q₀ = 1; else → Q₀ = 0.</li>
+        <li>Repeat for all bits.</li>
+        <li>If AC < 0 → perform final correction: AC = AC + M.</li>
+      </ol>
+      <p><b>Result:</b> Quotient = Q, Remainder = AC</p>
+    </details>
+
     <div class="explanation" id="explanation">Enter values and click <b>Start</b> to begin.</div>
+
+    <!-- Step Log Panel -->
+    <div class="step-log" id="step-log">
+      <p><i>Step log will appear here...</i></p>
+    </div>
 
     <div class="footer-buttons">
       <button id="next-btn" onclick="nextStep()" disabled>Next Step ▶️</button>
@@ -132,7 +267,6 @@
         tempAC = combined.slice(0, n);
         tempQ  = combined.slice(n, 2 * n);
 
-        // If AC >= 0 → AC = AC - M; else AC = AC + M
         let tempACdec = parseInt(tempAC, 2);
         if (tempACdec >= (1 << (n - 1))) tempACdec -= (1 << n);
 
@@ -147,7 +281,6 @@
           explain = "AC < 0 → Add M.";
         }
 
-        // Set Q₀
         let q0;
         if (tempACdec >= 0) { q0 = '1'; explain += " Set Q₀ = 1."; }
         else { q0 = '0'; explain += " Set Q₀ = 0."; }
@@ -165,7 +298,6 @@
         count--;
       }
 
-      // Final correction
       let finalACdec = parseInt(steps[steps.length - 1].AC, 2);
       if (finalACdec >= (1 << (n - 1))) finalACdec -= (1 << n);
       if (finalACdec < 0) {
@@ -185,6 +317,7 @@
       document.getElementById('reset-btn').disabled = false;
       updateRegisters(AC, Q, M);
       document.getElementById('explanation').innerHTML = 'Ready! Click <b>Next Step ▶️</b> to proceed.';
+      document.getElementById('step-log').innerHTML = '<i>Simulation initialized...</i>';
     }
 
     function nextStep() {
@@ -196,6 +329,7 @@
           `<strong>Quotient:</strong> ${quotient} (Binary: ${final.Q})<br>
            <strong>Remainder:</strong> ${remainder} (Binary: ${final.AC})`;
         document.getElementById('next-btn').disabled = true;
+        addLog(`✅ Final Result → Quotient=${quotient}, Remainder=${remainder}`);
         return;
       }
 
@@ -203,6 +337,7 @@
       updateRegisters(s.AC, s.Q, M);
       document.getElementById('explanation').innerHTML =
         `<b>Step ${s.step}:</b> ${s.explain}<br><i>${s.operation}</i>`;
+      addLog(`Step ${s.step}: AC=${s.AC}, Q=${s.Q} → ${s.operation}`);
       currentStep++;
     }
 
@@ -214,6 +349,7 @@
       document.getElementById('q-bits').innerHTML  = '';
       document.getElementById('m-bits').innerHTML  = '';
       document.getElementById('result').innerHTML  = '';
+      document.getElementById('step-log').innerHTML = '<i>Step log cleared.</i>';
       document.getElementById('next-btn').disabled = true;
       document.getElementById('reset-btn').disabled = true;
     }
@@ -233,6 +369,15 @@
         div.textContent = b;
         container.appendChild(div);
       });
+    }
+
+    function addLog(text) {
+      const log = document.getElementById('step-log');
+      const entry = document.createElement('div');
+      entry.className = 'log-entry';
+      entry.innerHTML = text;
+      log.appendChild(entry);
+      log.scrollTop = log.scrollHeight;
     }
   </script>
 </body>
